# Hematology-Challenge-HIDA

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
notebooks/: 00_eda.ipynb  01_starter_notebook.ipynb
results/: results_summary.csv
scripts/: analyze_results.py
src/hematol/: __init__.py  data.py  models.py  train.py  transforms.py
tests/: test_data.py  test_model.py
